--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,7 +18,7 @@ requirements:
   host:
     - pip
     - python >=3.8
-    - setuptools_scm
+    - setuptools-scm
   run:
     - dask-core
     - desert
@@ -26,6 +26,7 @@ requirements:
     - magicgui
     - marshmallow
     - napari
+    - napari-animation
     - nd2
     - numpy
     - openpyxl
@@ -33,6 +34,7 @@ requirements:
     - python >=3.8
     - pyyaml
     - qtpy
+    - scikit-learn
 
 test:
   imports:
